공지사항+룸예약 커밋입니다.

--- a/codesquare/src/main/resources/application.properties
+++ b/codesquare/src/main/resources/application.properties
@@ -44,7 +44,7 @@ seminarReview.savepath.directory=codesquareDB/seminarReview/
 seminarWanted.savepath.directory=codesquareDB/seminarWanted/
 studyReview.savepath.directory=codesquareDB/studyReview/
 studyWanted.savepath.directory=codesquareDB/studyWanted/
-
+roomIntro.savepath.directory=codesquareDB/RoomIntro/
 
 
 
