--- a/codesquare/src/main/resources/application.yml
+++ b/codesquare/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-
-
-
 facebook:
     client:
       clientId: 2585489348134198
@@ -10,6 +7,7 @@ facebook:
       tokenName: oauth_token
       authenticationScheme: query
       clientAuthenticationScheme: form
+      scope: email
     resource:
       userInfoUri: https://graph.facebook.com/me
       
@@ -24,3 +22,6 @@ google :
     scope: email, profile
   resource:
     userInfoUri: https://www.googleapis.com/oauth2/v2/userinfo
+    
+
+
