--- a/codesquare/pom.xml
+++ b/codesquare/pom.xml
@@ -166,11 +166,11 @@
 
 
 
-<!-- 		<dependency>
+	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
-		</dependency> -->
+		</dependency> 
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
