아이디 찾기, 비밀번호 찾기 구현 완료

--- a/codesquare/src/main/resources/application.properties
+++ b/codesquare/src/main/resources/application.properties
@@ -46,3 +46,14 @@ studyReview.savepath.directory=codesquareDB/studyReview/
 studyWanted.savepath.directory=codesquareDB/studyWanted/
 roomIntro.savepath.directory=codesquareDB/RoomIntro/
 
+
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=codesquare12@gmail.com
+spring.mail.password=code1212
+
+spring.mail.properties.mail.smtp.auth =true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
