--- a/codesquare/pom.xml
+++ b/codesquare/pom.xml
@@ -22,9 +22,9 @@
 	<dependencies>
 		<!-- fancybox -->
 		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>fancybox</artifactId>
-		    <version>3.2.5</version>
+			<groupId>org.webjars</groupId>
+			<artifactId>fancybox</artifactId>
+			<version>3.2.5</version>
 		</dependency>
 		<!-- Font Awesome -->
 		<dependency>
@@ -176,6 +176,12 @@
 			<version>2.1.2.RELEASE</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
 
 
 
@@ -191,6 +197,7 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 	</dependencies>
 
 	<build>
