강좌 소개 등록제외 제작완료

--- a/codesquare/src/main/resources/application.properties
+++ b/codesquare/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #Datasource
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://codesquare.coqcckw5gvux.ap-northeast-2.rds.amazonaws.com:3306/codesquare
+#org.mariadb.jdbc.Driver
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mariadb://codesquare.coqcckw5gvux.ap-northeast-2.rds.amazonaws.com:3306/codesquare
 spring.datasource.username=codesquare
 spring.datasource.password=codesquare112
 
@@ -19,6 +20,16 @@ spring.redis.host=13.125.105.29:8080
 spring.redis.password=1234
 spring.redis.port=6397
 spring.redis.database=1
+
+
+#mybatis loging
+
+
+
+
+
+
+
 
 
 #FileSavepathPnfo
