--- a/codesquare/pom.xml
+++ b/codesquare/pom.xml
@@ -20,11 +20,35 @@
 	</properties>
 
 	<dependencies>
+		<!-- commons file upload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<!-- Dropzone -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>dropzone</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+		<!-- jquery-ui -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery-ui</artifactId>
+			<version>1.12.1</version>
+		</dependency>
+		<!-- mybatis sql pretty -->
+		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
 		<!-- fancybox -->
 		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>fancybox</artifactId>
-		    <version>3.2.5</version>
+			<groupId>org.webjars</groupId>
+			<artifactId>fancybox</artifactId>
+			<version>3.2.5</version>
 		</dependency>
 		<!-- Font Awesome -->
 		<dependency>
@@ -170,13 +194,11 @@
 		</dependency>
 
 
-
-
-	<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
-		</dependency> 
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
