--- a/codesquare/pom.xml
+++ b/codesquare/pom.xml
@@ -20,12 +20,19 @@
 	</properties>
 
 	<dependencies>
-		<!-- commons file upload -->
+		<!-- jquery-serialize-object -->
 		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.1</version>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>jquery-serialize-object</artifactId>
+			<version>2.1.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+
 		<!-- Dropzone -->
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -224,18 +231,31 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>tomcat-maven-plugin</artifactId> 
+				<version>1.1</version> <configuration> <url>http://54.180.2.169/manager/html</url> 
+				<server>TomcatServer</server> <path>/codesquare</path> <username>catsbi</username> 
+				<password>1234</password> <charset>UTF-8</charset> <uriEncoding>UTF-8</uriEncoding> 
+				<update>true</update> </configuration> </plugin> -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-				<version>1.1</version>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
 				<configuration>
-					<url>http://13.125.245.147:8080/manager/text</url>
 					<path>/codesquare</path>
-					<username>catsbi</username>
-					<password>1234</password>
+					<url>http://54.180.2.169:8080/manager/text</url>
+					<server>TomcatServer</server>
+					<update>true</update>
 				</configuration>
 			</plugin>
 		</plugins>
