--- a/codesquare/src/main/resources/application.properties
+++ b/codesquare/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #jdbc:log4
 #org.mariadb.jdbc.Driver
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://codesquare.coqcckw5gvux.ap-northeast-2.rds.amazonaws.com:3306/codesquare
+spring.datasource.url=jdbc:log4jdbc:mariadb://codesquare.coqcckw5gvux.ap-northeast-2.rds.amazonaws.com:3306/codesquare?allowMultiQueries=true
 spring.datasource.username=codesquare
 spring.datasource.password=codesquare112
 
