--- a/codesquare/pom.xml
+++ b/codesquare/pom.xml
@@ -20,6 +20,13 @@
 	</properties>
 
 	<dependencies>
+	
+		<!-- lucy -->
+		<dependency>
+			<groupId>com.navercorp.lucy</groupId>
+			<artifactId>lucy-xss-servlet</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 		<!-- jquery-serialize-object -->
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
