룸예약98%, 게시판 97% 커밋

--- a/codesquare/src/main/resources/application.properties
+++ b/codesquare/src/main/resources/application.properties
@@ -67,7 +67,7 @@ seminarWanted.savepath.directory=codesquareDB/SeminarWanted/
 studyReview.savepath.directory=codesquareDB/StudyReview/
 studyWanted.savepath.directory=codesquareDB/StudyWanted/
 roomIntro.savepath.directory=codesquareDB/RoomIntro/
-
+companyIntro.savepath.directory=codesquareDB/CompanyIntro/
 
 #mail
 spring.mail.host=smtp.gmail.com
