--- a/codesquare/pom.xml
+++ b/codesquare/pom.xml
@@ -22,11 +22,11 @@
 	<dependencies>
 	
 		<!-- lucy -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.navercorp.lucy</groupId>
 			<artifactId>lucy-xss-servlet</artifactId>
 			<version>2.0.0</version>
-		</dependency>
+		</dependency> -->
 		<!-- jquery-serialize-object -->
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
