++++알림/스터디 댓글/스터디 조회수 추가 커밋++++

--- a/codesquare/pom.xml
+++ b/codesquare/pom.xml
@@ -113,6 +113,12 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<!--websocket -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		
 		<!-- stomp -->
 		<dependency>
 			<groupId>org.webjars</groupId>
