----- 창형 최종 커밋 -----

--- a/codesquare/src/main/resources/application.properties
+++ b/codesquare/src/main/resources/application.properties
@@ -68,6 +68,7 @@ studyReview.savepath.directory=codesquareDB/StudyReview/
 studyWanted.savepath.directory=codesquareDB/StudyWanted/
 roomIntro.savepath.directory=codesquareDB/RoomIntro/
 companyIntro.savepath.directory=codesquareDB/CompanyIntro/
+lectureimg.savepath.directory=codesquareDB/Lectureimg/
 
 #mail
 spring.mail.host=smtp.gmail.com
